docs(concepts): fix navigation links after file reorder and clean up lazy eval note
Corrected broken prev/next links across concept notes B–F to reflect the
updated file naming/order (C Structure, D How To Create, E Primitive).
Added missing forward link from K to L and a nav footer in L. Removed
duplicate navigation table from H (Lazy Evaluation). Also replaced
Collectors.toList() with toList() in EasyNumbersProblemSolution.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Co-Authored-By: GitHub Copilot <copilot@github.com>